# SqliteOverlay

./: .gitignore  ActionMngr.cpp  ActionMngr.h  CMakeLists.txt  Changelog.cpp  Changelog.h  ClausesAndQueries.cpp  ClausesAndQueries.h  CommonTabularClass.cpp  CommonTabularClass.h  DateAndTime.cpp  DateAndTime.h  DbTab.cpp  DbTab.h  Defs.cpp  Defs.h  Doxyfile  GenericDatabaseObject.cpp  GenericDatabaseObject.h  GenericObjectManager.cpp  GenericObjectManager.h  Generics.h  HelperFunc.cpp  HelperFunc.h  KeyValueTab.cpp  KeyValueTab.h  Logger.cpp  Logger.h  SqlStatement.cpp  SqlStatement.h  SqliteDatabase.cpp  SqliteDatabase.h  SqliteExceptions.h  StringHelper.cpp  StringHelper.h  TabRow.cpp  TabRow.h  TableCreator.cpp  TableCreator.h  Transaction.cpp  (+5 more)
tests/: BasicTestClass.cpp  BasicTestClass.h  DatabaseTestScenario.cpp  DatabaseTestScenario.h  ExampleTableAdapter.h  SampleDB.cpp  SampleDB.h  tstActionManager.cpp  tstCSV.cpp  tstClausesAndQueries.cpp  tstCommonTabularClass.cpp  tstCopyAndBackup.cpp  tstDataChangeCallback.cpp  tstDatabaseInit.cpp  tstDatabaseMisc.cpp  tstDatabaseQueries.cpp  tstDateTime.cpp  tstDbTab.cpp  tstGenerics.cpp  tstIterators.cpp  tstKeyValueTab.cpp  tstMultithreadLocking.cpp  tstStatement.cpp  tstTabRow.cpp  tstTableCreator.cpp  tstThreadsAndBusy.cpp  tstTimestamps.cpp  tstTransaction.cpp  tstUserManager.cpp  unitTestMain.cpp
